Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114442

[REG 6.5.1->6.5.2] namespace build fails on Windows, Multimedia

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.5.2, 6.6.0 RC
    • 6.5.2, 6.6.0 Beta1
    • Multimedia
    • Windows
    • 44918d996 (dev), 61d191ffe (6.6), da465e62e (6.5)

    Description

      Install Qt sources on Windows x64, prepare namespace build with MSVC, configure:

      cmake -DCMAKE_C_COMPILER=cl.exe -DCMAKE_CXX_COMPILER=cl.exe -GNinja -DCMAKE_BUILD_TYPE=Release -DQT_BUILD_EXAMPLES=OFF -DBUILD_WITH_PCH=OFF -DOPENSSL_ROOT_DIR=C:\openssl\include\.. -DFEATURE_system_zlib=OFF -DPostgreSQL_ROOT=C:\Utils\postgresql\pgsql\lib\.. -DQT_BUILD_TESTS=OFF -DCMAKE_MESSAGE_LOG_LEVEL=STATUS -DQT_NAMESPACE=RTA C:\Users\qt\RTA\src-6.5.2 -DCMAKE_INSTALL_PREFIX:PATH=C:\Users\qt\RTA\src-6.5.2\qtbase 

      Passes, but fails when building
      cmake --build . --parallel

      [6421/11246] Building CXX object qtmultimedia\src\multimedia\CMakeFiles\Multimedia.dir\windows\qwindowsaudiosource.cpp.obj
      [6422/11246] Running moc --collect-json for target 3DCore
      [6423/11246] Building CXX object qt3d\src\core\CMakeFiles\3DCore.dir\3DCore_autogen\mocs_compilation.cpp.obj
      [6424/11246] Building RC object qt3d\src\core\CMakeFiles\3DCore.dir\3DCore_resource.rc.res
      [6425/11246] Building CXX object qtmultimedia\src\multimedia\CMakeFiles\Multimedia.dir\windows\qwindowsmediadevices.cpp.obj
      FAILED: qtmultimedia/src/multimedia/CMakeFiles/Multimedia.dir/windows/qwindowsmediadevices.cpp.obj 
      C:\PROGRA~2\MICROS~2\2019\PROFES~1\VC\Tools\MSVC\1429~1.301\bin\Hostx64\x64\cl.exe  /nologo /TP -DMultimedia_EXPORTS -DNOMINMAX -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_MULTIMEDIA_LIB -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_UP_TO=0x040800 -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_GUI_LIB -DQT_MOC_COMPAT -DQT_NAMESPACE=RTA -DQT_NETWORK_LIB -DQT_NO_AS_CONST=1 -DQT_NO_CAST_TO_ASCII -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_USE_QSTRINGBUILDER -DQT_WARN_DEPRECATED_UP_TO=0x070000 -DUNICODE -DWIN32 -DWIN64 -D_CRT_SECURE_NO_WARNINGS -D_ENABLE_EXTENDED_ALIGNED_STORAGE -D_UNICODE -D_USE_MATH_DEFINES -D_WIN64 -D_WINDLL -IC:\Users\qt\RTA\src-6.5.2\qtmultimedia\src\multimedia\Multimedia_autogen\include -IC:\Users\qt\RTA\src-6.5.2\qtbase\include -IC:\Users\qt\RTA\src-6.5.2\qtbase\include\QtMultimedia -IC:\Users\qt\RTA\src-6.5.2\qtmultimedia\src\multimedia -IC:\Users\qt\RTA\src-6.5.2\qtmultimedia\src\multimedia\audio -IC:\Users\qt\RTA\src-6.5.2\qtmultimedia\src\multimedia\camera -IC:\Users\qt\RTA\src-6.5.2\qtmultimedia\src\multimedia\controls -IC:\Users\qt\RTA\src-6.5.2\qtmultimedia\src\multimedia\platform -IC:\Users\qt\RTA\src-6.5.2\qtmultimedia\src\multimedia\playback -IC:\Users\qt\RTA\src-6.5.2\qtmultimedia\src\multimedia\recording -IC:\Users\qt\RTA\src-6.5.2\qtmultimedia\src\multimedia\video -IC:\Users\qt\RTA\src-6.5.2\qtbase\include\QtMultimedia\6.5.2 -IC:\Users\qt\RTA\src-6.5.2\qtbase\include\QtMultimedia\6.5.2\QtMultimedia -IC:\Users\qt\RTA\src-6.5.2\qtmultimedia\src\multimedia\windows -IC:\Users\qt\RTA\src-6.5.2\qtbase\include\QtCore -IC:\Users\qt\RTA\src-6.5.2\qtbase\mkspecs\win32-msvc -IC:\Users\qt\RTA\src-6.5.2\qtbase\include\QtGui -IC:\Users\qt\RTA\src-6.5.2\qtbase\include\QtNetwork -IC:\Users\qt\RTA\src-6.5.2\qtbase\src\corelib -IC:\Users\qt\RTA\src-6.5.2\qtbase\include\QtCore\6.5.2 -IC:\Users\qt\RTA\src-6.5.2\qtbase\include\QtCore\6.5.2\QtCore -IC:\Users\qt\RTA\src-6.5.2\qtbase\src\gui -IC:\Users\qt\RTA\src-6.5.2\qtbase\include\QtGui\6.5.2 -IC:\Users\qt\RTA\src-6.5.2\qtbase\include\QtGui\6.5.2\QtGui -external:IC:\VulkanSDK\1.2.182.0\Include -external:W0 /DWIN32 /D_WINDOWS /DNDEBUG -O2 -MD /W3 /EHs-c- /wd4530 /wd4577 -Zc:__cplusplus -permissive- -utf-8 -FS -Zc:rvalueCast -Zc:inline -Zc:strictStrings -Zc:throwingNew -Zc:referenceBinding -Zc:ternary -Zc:externConstexpr -Zc:wchar_t -bigobj -guard:cf -Gw -std:c++17 /showIncludes /Foqtmultimedia\src\multimedia\CMakeFiles\Multimedia.dir\windows\qwindowsmediadevices.cpp.obj /Fdqtmultimedia\src\multimedia\CMakeFiles\Multimedia.dir\ /FS -c C:\Users\qt\RTA\src-6.5.2\qtmultimedia\src\multimedia\windows\qwindowsmediadevices.cpp
      C:\Program Files (x86)\Windows Kits\10\include\10.0.22621.0\um\audioclient.h(779): error C2371: 'IAudioClient3': redefinition; different basic types
      C:\Program Files (x86)\Windows Kits\10\include\10.0.22621.0\um\audioclient.h(66): note: see declaration of 'IAudioClient3'
      C:\Users\qt\RTA\src-6.5.2\qtmultimedia\src\multimedia\windows\qwindowsmediadevices.cpp(196): error C2027: use of undefined type 'RTA::IAudioClient3'
      C:\Users\qt\RTA\src-6.5.2\qtmultimedia\src\multimedia\windows\qwindowsmediadevices_p.h(29): note: see declaration of 'RTA::IAudioClient3' 

      Configure summary and build log with 1000 last lines attached (full log can be provided if needed).

      Same problem with MinGW build.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            padubsky Pavel Dubsky
            joaijala Johanna Äijälä
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes