Fix namespace build on Windows for IAudioClient3

Forward declaration of IAudioClient3 interface was placed inside Qt
namespace declaration that failed non-empty namespace builds. This fix
moves the forward declaration outside Qt namespace.

Task-number: QTBUG-114442
Change-Id: Ia02db31aaa20002bf7b44fe47d71ecb02b72246a
Reviewed-by: Jøger Hansegård <joger.hansegard@qt.io>
Reviewed-by: Lars Knoll <lars@knoll.priv.no>
(cherry picked from commit 44918d9966c65a39ea988bf4aa7f64246da3d820)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>